// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`whitespace '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "whitespace",
  ],
  "pos": 0,
}
`;

exports[`whitespace ' ' conditional success tests AST matches snapshot 1`] = `" "`;

exports[`whitespace '/n' conditional success tests AST matches snapshot 1`] = `"/n"`;

exports[`whitespace '/r' conditional success tests AST matches snapshot 1`] = `"/r"`;

exports[`whitespace '/r/n' conditional success tests AST matches snapshot 1`] = `"/r/n"`;

exports[`whitespace '/r/n  /n' conditional success tests AST matches snapshot 1`] = `"/r/n  /n"`;

exports[`whitespace 'b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "whitespace",
  ],
  "pos": 0,
}
`;

exports[`optional whitespace '' conditional success tests AST matches snapshot 1`] = `""`;

exports[`optional whitespace ' ' conditional success tests AST matches snapshot 1`] = `" "`;

exports[`optional whitespace '/n' conditional success tests AST matches snapshot 1`] = `"/n"`;

exports[`optional whitespace '/r' conditional success tests AST matches snapshot 1`] = `"/r"`;

exports[`optional whitespace '/r/n' conditional success tests AST matches snapshot 1`] = `"/r/n"`;

exports[`optional whitespace '/r/n  /n' conditional success tests AST matches snapshot 1`] = `"/r/n  /n"`;

exports[`optional whitespace 'b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": 0,
}
`;

exports[`newline '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "newline",
  ],
  "pos": 0,
}
`;

exports[`newline ' ' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "newline",
  ],
  "pos": 0,
}
`;

exports[`newline '/n' conditional success tests AST matches snapshot 1`] = `"/n"`;

exports[`newline '/r' conditional success tests AST matches snapshot 1`] = `"/r"`;

exports[`newline '/r/n' conditional success tests AST matches snapshot 1`] = `"/r/n"`;

exports[`newline '/r/n  /n' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": 2,
}
`;

exports[`newline 'b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "newline",
  ],
  "pos": 0,
}
`;
